# compute-boinc-server

api/: bun.lockb  package.json  start_server
api-server/: pyproject.toml  start_server  stop_server
api-server/api_server/: main.py
api-src/: .air.toml  go.mod  go.sum  run.js
api-src/cmd/: main.go
api-src/handlers/: boinc2docker.go  healthcheck.go
api/src/: index.ts
projects/: quot.diff
projects/proto/: config.xml  project.xml  proto.cronjob  proto.httpd.conf  proto.readme  run_state_common-compute-1.xml
projects/proto/cgi-bin/: file_upload_handler
projects/proto/download/: vboxwrapper_26199_x86_64-apple-darwin
projects/proto/html/cache/27/: show_user.php_userid%3D1
projects/proto/html/cache/36/: cpu_list.php
projects/proto/html/cache/44/: show_user.php_userid%3D3
projects/proto/html/cache/4d/: show_user.php_userid%3D2
projects/proto/html/cache/76/: get_project_config.php_project_config_platform_xml
projects/proto/html/inc/: wap.inc
projects/proto/html/project/: cache_parameters.inc  project.inc  project_description.php  project_specific_prefs.inc
projects/proto/html/user/: schedulers.txt
projects/proto/html/user_profile/: profile_country.html  user_gallery_1.html
projects/proto/keys/: code_sign_private  code_sign_public  upload_private  upload_public
projects/proto/log_common-compute-1/: antique_file_deleter.out  badge_assign.out  delete_expired_tokens.out  delete_expired_users_and_hosts.out  notify.out  update_forum_activities.out  update_profile_pages.out  update_stats.out  update_uotd.out
(+37 files in other folders)
